Update 'go-qhmeutuz' component image to: quay.io/rhtap_qe/go-qhmeutuz:94258f588aa5eac32c73676b7c4ace7f4a4c6412@sha256:9e1af6869300120b91516ab93fd9c47941fe40a65cdb6b7a5b4d3f1e429deee5

--- a/components/go-qhmeutuz/overlays/development/deployment-patch.yaml
+++ b/components/go-qhmeutuz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-qhmeutuz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-qhmeutuz:94258f588aa5eac32c73676b7c4ace7f4a4c6412@sha256:9e1af6869300120b91516ab93fd9c47941fe40a65cdb6b7a5b4d3f1e429deee5
+          name: container-image
